fix header on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,13 @@
     font-size: 3rem;
 }
 
+@media (max-width: 380px) {
+    .hero-unit {
+        padding: 60px 10px;
+        font-size: 70%;
+    }
+}
+
 .container {
     max-width: 700px;
 }
